--- a/wp-content/themes/twentyfourteen/css/sass/paper-status.scss
+++ b/wp-content/themes/twentyfourteen/css/sass/paper-status.scss
@@ -5,6 +5,7 @@
                 margin: 12px;
                 padding: 5px;
                 border-radius: 5px;
+                display: inline-block;
            }
         }
     }
